k8s/infra/platform/traefik/overlays/prod-eu/traefik-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: traefik-depl
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      containers:
        - name: traefik
          args:
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            #
            # https://doc.traefik.io/traefik/reference/install-configuration/entrypoints/#configuration-options
            #
            - --entrypoints.https.forwardedHeaders.trustedIPs=<LB_OR_WAF_SOURCE_RANGES>
            #
            - --entrypoints.http.transport.respondingTimeouts.readTimeout=10s
            - --entrypoints.http.transport.respondingTimeouts.writeTimeout=10s
            - --entrypoints.http.transport.respondingTimeouts.idleTimeout=15s
            - --entrypoints.http.transport.maxHeaderBytes=16384
            #
            - --entrypoints.https.transport.respondingTimeouts.readTimeout=10s
            - --entrypoints.https.transport.respondingTimeouts.writeTimeout=10s
            - --entrypoints.https.transport.respondingTimeouts.idleTimeout=15s
            - --entrypoints.https.transport.maxHeaderBytes=16384
            #
            # https://doc.traefik.io/traefik/reference/install-configuration/providers/kubernetes/kubernetes-crd/#configuration-options
            - --providers.kubernetescrd=true
            #
            # https://doc.traefik.io/traefik/reference/install-configuration/observability/logs-and-accesslogs/#logs
            - --log.level=INFO
            - --accesslog=true
            #
            # https://doc.traefik.io/traefik/reference/install-configuration/observability/healthcheck/ping/#ping
            - --ping=true
            - --ping.entryPoint=http
