k8s/infra/platform/traefik/overlays/prod-eu/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`tma.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: le
